renamed to mdcr, changed daemon name

--- a/config/mdcr/mdcr.env
+++ b/config/mdcr/mdcr.env
@@ -1,5 +1,5 @@
-CODENAME=mdc
-MNODE_DAEMON=${MNODE_DAEMON:-/usr/local/bin/madcoind}
+CODENAME=mdcr
+MNODE_DAEMON=${MNODE_DAEMON:-/usr/local/bin/madcoind -daemon}
 MNODE_INBOUND_PORT=${MNODE_INBOUND_PORT:-21525}
 GIT_URL=https://github.com/mccmm/Madcoin-Core
 SCVERSION="master"
