--- a/config/mdcr/mdcr.env
+++ b/config/mdcr/mdcr.env
@@ -1,6 +1,6 @@
 CODENAME=mdcr
 MNODE_DAEMON=${MNODE_DAEMON:-/usr/local/bin/madcoind -daemon}
 MNODE_INBOUND_PORT=${MNODE_INBOUND_PORT:-21525}
-GIT_URL=https://github.com/mccmm/Madcoin-Core
+GIT_URL=https://github.com/mccmm/Madcoin-Core.git
 SCVERSION="master"
 NETWORK_BASE_TAG="2021"
