--- a/config/xax/xax.env
+++ b/config/xax/xax.env
@@ -1,6 +1,6 @@
 CODENAME=mdc
-MNODE_DAEMON=${MNODE_DAEMON:-/usr/local/bin/madcoind}
-MNODE_INBOUND_PORT=${MNODE_INBOUND_PORT:-21525}
-GIT_URL=https://github.com/mccmm/Madcoin-Core.git
-SCVERSION="master"
+MNODE_DAEMON=${MNODE_DAEMON:-/usr/local/bin/./artaxd –daemon}
+MNODE_INBOUND_PORT=${MNODE_INBOUND_PORT:-21527}
+GIT_URL=https://github.com/Artax-Project/Artax.git
+SCVERSION="tags/V1.0.0.1"
 NETWORK_BASE_TAG="2021"
