--- a/config/xax/xax.env
+++ b/config/xax/xax.env
@@ -1,4 +1,4 @@
-CODENAME=mdc
+CODENAME=xax
 MNODE_DAEMON=${MNODE_DAEMON:-/usr/local/bin/./artaxd –daemon}
 MNODE_INBOUND_PORT=${MNODE_INBOUND_PORT:-21527}
 GIT_URL=https://github.com/Artax-Project/Artax.git
