--- a/config/xax/xax.env
+++ b/config/xax/xax.env
@@ -1,6 +1,6 @@
 CODENAME=xax
 MNODE_DAEMON=${MNODE_DAEMON:-/usr/local/bin/artaxd &}
 MNODE_INBOUND_PORT=${MNODE_INBOUND_PORT:-21527}
-GIT_URL=https://github.com/Artax-Project/Artax
+GIT_URL=https://github.com/artax-project/artax
 SCVERSION="tags/V1.0.0.1"
 NETWORK_BASE_TAG="2024"
