--- a/config/mdcr/mdcr.env
+++ b/config/mdcr/mdcr.env
@@ -2,5 +2,5 @@ CODENAME=mdcr
 MNODE_DAEMON=${MNODE_DAEMON:-/usr/local/bin/madcoind}
 MNODE_INBOUND_PORT=${MNODE_INBOUND_PORT:-21525}
 GIT_URL=https://github.com/mccmm/Madcoin-Core.git
-SCVERSION="v0.12.1.6"
+SCVERSION="tags/v0.12.1.6"
 NETWORK_BASE_TAG="4002"
