--- a/config/mdcr/mdcr.conf
+++ b/config/mdcr/mdcr.conf
@@ -5,6 +5,7 @@ server=1
 listen=1
 daemon=1
 masternode=1
+logtimestamps=1
 rpcallowip=127.0.0.1
 bind=XXX_IPV6_INT_BASE_XXX:XXX_NETWORK_BASE_TAG_XXX::XXX_NUM_XXY:XXX_MNODE_INBOUND_PORT_XXX
 masternodeprivkey=
