--- a/config/mdc/mdc.env
+++ b/config/mdc/mdc.env
@@ -1,6 +1,6 @@
 CODENAME=mdc
 MNODE_DAEMON=${MNODE_DAEMON:-/usr/local/bin/madcoind}
-MNODE_INBOUND_PORT=${MNODE_INBOUND_PORT:-10882}
-GIT_URL=https://github.com/madcoin-project/madcoin.git
-SCVERSION="tags/v1.0.0.2"
+MNODE_INBOUND_PORT=${MNODE_INBOUND_PORT:-1414}
+GIT_URL=https://github.com/madcoin-project/madcoinv3
+SCVERSION="tags/v2.0.0.1"
 NETWORK_BASE_TAG="2020"
