--- a/config/xax/xax.conf
+++ b/config/xax/xax.conf
@@ -1,14 +1,38 @@
 rpcuser=XXX_GIT_PROJECT_XXXrpc
 rpcpassword=XXX_PASS_XXX
-rpcport=2152XXX_NUM_XXX
+rpcport=555XXX_NUM_XXX
 rpcallowip=127.0.0.1
+txindex=1
+logtimestamps=1
 server=1
 daemon=1
 listen=1
 masternode=1
+staking=0
+gen=0
+maxconnections=256
 bind=XXX_IPV6_INT_BASE_XXX:XXX_NETWORK_BASE_TAG_XXX::XXX_NUM_XXY:XXX_MNODE_INBOUND_PORT_XXX
 masternodeprivkey=
-maxconnections=64
+addnode=45.32.233.39:21527
+addnode=144.202.74.29:21527
+addnode=199.247.0.99:21527
+addnode=35.185.28.120:21527
+addnode=45.32.22.238:21527
+addnode=140.82.60.29:21527
+addnode=108.61.252.205:21527
+addnode=45.63.82.193:21527
+addnode=46.101.48.90:21527
+addnode=132.148.139.228:21527
+addnode=121.63.252.178:21512
+addnode=199.247.6.97:21527
+addnode=173.208.188.35:21527
+addnode=52.47.168.149:21527
+addnode=144.202.36.100:21544
+addnode=207.148.0.96:21527
+addnode=54.37.72.144:21532
+addnode=104.207.143.189:21527
+addnode=165.227.87.76:21529
+addnode=207.154.194.110:21527
 addnode=202.91.33.100:21510
 addnode=121.63.252.178:21517
 addnode=140.82.8.194:21527
@@ -29,15 +53,3 @@ addnode=167.99.164.67:21527
 addnode=217.182.71.85:21527
 addnode=121.63.252.178:21514
 addnode=54.37.72.144:21530
-addnode=159.203.161.244
-addnode=104.131.44.238
-addnode=178.62.57.88
-addnode=159.65.94.40
-addnode=137.74.173.114
-addnode=188.36.56.252
-addnode=90.156.157.28
-addnode=165.227.87.76
-addnode=67.205.173.248
-addnode=167.99.7.215
-addnode=67.207.94.226
-addnode=217.182.71.85
